--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-baseurl: /starter
+baseurl: /tromso
 permalink: pretty
 markdown: kramdown
 paginate: 5
-repo: starter
+repo: tromso
 github_org: maptime
 maptime:
-  chapter: Meetup name
-  twitter: YourName
+  chapter: MaptimeTOS
+  twitter: MaptimeTOS
   #disqus: YOUR DISQUS USERNAME
